Updated network analysis to make q values a bit more conservative.

--- a/network_analysis/relate_modules_to_traits.ipynb
+++ b/network_analysis/relate_modules_to_traits.ipynb
@@ -53,6 +53,13 @@
       "The following object is masked from ‘package:dplyr’:\n",
       "\n",
       "    count\n",
+      "\n",
+      "\n",
+      "Attaching package: ‘qvalue’\n",
+      "\n",
+      "The following object is masked from ‘package:WGCNA’:\n",
+      "\n",
+      "    qvalue\n",
       "\n"
      ]
     }
@@ -62,6 +69,7 @@
     "library(WGCNA)\n",
     "library(cowplot)\n",
     "library(matrixStats)\n",
+    "library(qvalue)\n",
     "\n",
     "# Custom package\n",
     "library(rutils)"
@@ -94,7 +102,10 @@
     "dirs <- rutils::get_dev_directories(dev_paths_file = \"../dev_paths.txt\")\n",
     "unified_dsets <- c(\"unified_cervical_data\", \"unified_uterine_data\", \"unified_uterine_endometrial_data\")\n",
     "\n",
-    "event_code <- list(\"Alive\" = 0, \"Dead\" = 1)"
+    "event_code <- list(\"Alive\" = 0, \"Dead\" = 1)\n",
+    "# Want to bias q-values closer to \"BH\" adjustment for module-wise multiple testing\n",
+    "# since there are fewer modules than genes\n",
+    "module_lambda_thresh <- 0.5"
    ]
   },
   {
@@ -103,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 1"
+    "dset_idx <- 3"
    ]
   },
   {
@@ -161,13 +172,14 @@
     "    time = data_traits$survival_time, \n",
     "    event = data_traits$vital_status, \n",
     "    fastCalculation = FALSE,\n",
-    "    qValues = TRUE\n",
+    "    qValues = FALSE\n",
     ")\n",
     "\n",
     "module_vital_df <- module_vital %>%\n",
     "    as_tibble() %>%\n",
     "    dplyr::rename_all(tolower) %>%\n",
-    "    dplyr::rename(module = id, pval = pvaluelogrank, qval = qvaluelogrank, hr = hazardratio, dev_cor = cordeviance) %>%\n",
+    "    dplyr::rename(module = id, pval = pvaluelogrank, hr = hazardratio, dev_cor = cordeviance) %>%\n",
+    "    dplyr::mutate(qval = WGCNA::qvalue(pval, lambda = seq(0, module_lambda_thresh, 0.05))$qvalues) %>%\n",
     "    dplyr::select(module, hr, dev_cor, pval, qval) %>%\n",
     "    dplyr::rename_if((colnames(.) != \"module\"), ~ gsub(\"^\", \"vital_\", .))\n",
     "# module_vital_df"
@@ -176,13 +188,27 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
       "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
       "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
       "“Loglik converged before variable  1 ; coefficient may be infinite. ”Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
@@ -246,7 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "module_figo_qval_df <- apply(module_figo_pval, MARGIN = 2, function(x) { WGCNA::qvalue(x)$qvalues }) %>%\n",
+    "module_figo_qval_df <- apply(module_figo_pval, MARGIN = 2, function(x) { WGCNA::qvalue(x, lambda = seq(0, module_lambda_thresh, 0.05))$qvalues }) %>%\n",
     "    as_tibble(rownames = \"module\") %>%\n",
     "    dplyr::rename_if((colnames(.) != \"module\"), ~ gsub(\"$\", \"_qval\", .))"
    ]
@@ -275,7 +301,7 @@
    "source": [
     "gene_mm <- WGCNA::cor(data_expr, mes, use = \"p\")\n",
     "gene_mm_pval <- corPvalueStudent(gene_mm, nSamples = n_samples)\n",
-    "gene_mm_qval <- apply(gene_mm_pval, MARGIN = 2, function(x) { WGCNA::qvalue(x)$qvalues })"
+    "# gene_mm_qval <- apply(gene_mm_pval, MARGIN = 2, function(x) { WGCNA::qvalue(x)$qvalues })"
    ]
   },
   {
@@ -303,10 +329,13 @@
     "    as_tibble(rownames = \"geneID\") %>%\n",
     "    dplyr::rename_if(startsWith(colnames(.), \"ME\"), ~ gsub(\"ME\", \"\", .)) %>%\n",
     "    dplyr::rename_if(!startsWith(colnames(.), \"geneID\"), ~ gsub(\"$\", \"_pval\", .))\n",
-    "gene_mm_qval_df <- gene_mm_qval %>%\n",
-    "    as_tibble(rownames = \"geneID\") %>%\n",
-    "    dplyr::rename_if(startsWith(colnames(.), \"ME\"), ~ gsub(\"ME\", \"\", .)) %>%\n",
-    "    dplyr::rename_if(!startsWith(colnames(.), \"geneID\"), ~ gsub(\"$\", \"_qval\", .))"
+    "# Don't need to compute q-values for module membership -- \n",
+    "# not really a multiple testing application\n",
+    "\n",
+    "# gene_mm_qval_df <- gene_mm_qval %>%\n",
+    "#     as_tibble(rownames = \"geneID\") %>%\n",
+    "#     dplyr::rename_if(startsWith(colnames(.), \"ME\"), ~ gsub(\"ME\", \"\", .)) %>%\n",
+    "#     dplyr::rename_if(!startsWith(colnames(.), \"geneID\"), ~ gsub(\"$\", \"_qval\", .))"
    ]
   },
   {
@@ -371,12 +400,13 @@
     "joined_mm_gs_df <- gene_module_map_df %>%\n",
     "    inner_join(gene_mm_df, by = \"geneID\") %>%\n",
     "    inner_join(gene_mm_pval_df, by = \"geneID\") %>%\n",
-    "    inner_join(gene_mm_qval_df, by = \"geneID\") %>%\n",
+    "#     inner_join(gene_mm_qval_df, by = \"geneID\") %>%\n",
     "    # Specify cor, pval, and qval for module to which this gene is asigned\n",
     "    dplyr::mutate(mm_cor = !!as.name(paste0(.$module, \"_cor\"))) %>%\n",
     "    dplyr::mutate(mm_pval = !!as.name(paste0(.$module, \"_pval\"))) %>%\n",
-    "    dplyr::mutate(mm_qval = !!as.name(paste0(.$module, \"_qval\"))) %>%\n",
-    "    dplyr::select(geneID, module, mm_cor, mm_pval, mm_qval, everything()) %>%\n",
+    "#     dplyr::mutate(mm_qval = !!as.name(paste0(.$module, \"_qval\"))) %>%\n",
+    "#     dplyr::select(geneID, module, mm_cor, mm_pval, mm_qval, everything()) %>%\n",
+    "    dplyr::select(geneID, module, mm_cor, mm_pval, everything()) %>%\n",
     "    inner_join(gene_figo_df, by = \"geneID\") %>%\n",
     "    inner_join(gene_figo_pval_df, by = \"geneID\") %>%\n",
     "    inner_join(gene_figo_qval_df, by = \"geneID\") %>%\n",
