Looking at meta analysis if use q-values instead of padj values.

--- a/feature_selection_analysis/feature_selection_meta.ipynb
+++ b/feature_selection_analysis/feature_selection_meta.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
+      "✔ ggplot2 3.3.2     ✔ purrr   0.3.4\n",
+      "✔ tibble  3.0.3     ✔ dplyr   1.0.0\n",
+      "✔ tidyr   1.1.0     ✔ stringr 1.4.0\n",
+      "✔ readr   1.3.1     ✔ forcats 0.5.0\n",
+      "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "✖ dplyr::filter() masks stats::filter()\n",
+      "✖ dplyr::lag()    masks stats::lag()\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "\n",
@@ -14,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +154,8 @@
       "  lfcSE = col_double(),\n",
       "  stat = col_double(),\n",
       "  pvalue = col_double(),\n",
-      "  padj = col_double()\n",
+      "  padj = col_double(),\n",
+      "  qval = col_double()\n",
       ")\n"
      ]
     },
@@ -290,8 +306,11 @@
    ],
    "source": [
     "DESeq_results_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[dset_idx], \"_DESeq_results.tsv\"))\n",
+    "# filtered_DESeq_results_df <- DESeq_results_df %>%\n",
+    "#     dplyr::filter(abs(log2FoldChange) > lfc_thresh, padj < p_thresh)\n",
     "filtered_DESeq_results_df <- DESeq_results_df %>%\n",
-    "    dplyr::filter(abs(log2FoldChange) > lfc_thresh, padj < p_thresh)\n",
+    "    dplyr::filter(abs(log2FoldChange) > lfc_thresh, qval < p_thresh)\n",
+    "\n",
     "filtered_matrisome_DESeq_results_df <- filtered_DESeq_results_df %>%\n",
     "    dplyr::filter(geneID %in% matrisome_df$gene_symbol)\n",
     "\n",
@@ -325,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +362,9 @@
       "cols(\n",
       "  geneID = col_character(),\n",
       "  gene_pval = col_double(),\n",
-      "  gene_coeff = col_double()\n",
+      "  gene_coeff = col_double(),\n",
+      "  gene_qval = col_double(),\n",
+      "  gene_padj = col_double()\n",
       ")\n"
      ]
     }
@@ -351,13 +372,15 @@
    "source": [
     "coxph_null_scores_df <- read_tsv(paste0(dirs$analysis_dir, \"/meta/\", \"coxph_null_scores.tsv\"))\n",
     "coxph_results_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[dset_idx], \"_coxph_results.tsv\"))\n",
+    "# filtered_coxph_results_df <- coxph_results_df %>%\n",
+    "#     dplyr::filter(gene_pval < p_thresh)\n",
     "filtered_coxph_results_df <- coxph_results_df %>%\n",
-    "    dplyr::filter(gene_pval < p_thresh)"
+    "    dplyr::filter(gene_qval < p_thresh)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -439,16 +462,16 @@
     {
      "data": {
       "text/html": [
-       "'Sig. Cox PH genes: 89'"
+       "'Sig. Cox PH genes: 0'"
       ],
       "text/latex": [
-       "'Sig. Cox PH genes: 89'"
+       "'Sig. Cox PH genes: 0'"
       ],
       "text/markdown": [
-       "'Sig. Cox PH genes: 89'"
+       "'Sig. Cox PH genes: 0'"
       ],
       "text/plain": [
-       "[1] \"Sig. Cox PH genes: 89\""
+       "[1] \"Sig. Cox PH genes: 0\""
       ]
      },
      "metadata": {},
@@ -457,16 +480,16 @@
     {
      "data": {
       "text/html": [
-       "'Prop. sig. Cox PH genes: 0.0866601752677702'"
+       "'Prop. sig. Cox PH genes: 0'"
       ],
       "text/latex": [
-       "'Prop. sig. Cox PH genes: 0.0866601752677702'"
+       "'Prop. sig. Cox PH genes: 0'"
       ],
       "text/markdown": [
-       "'Prop. sig. Cox PH genes: 0.0866601752677702'"
+       "'Prop. sig. Cox PH genes: 0'"
       ],
       "text/plain": [
-       "[1] \"Prop. sig. Cox PH genes: 0.0866601752677702\""
+       "[1] \"Prop. sig. Cox PH genes: 0\""
       ]
      },
      "metadata": {},
@@ -475,16 +498,16 @@
     {
      "data": {
       "text/html": [
-       "'Sig. Cox PH protective: 11'"
+       "'Sig. Cox PH protective: 0'"
       ],
       "text/latex": [
-       "'Sig. Cox PH protective: 11'"
+       "'Sig. Cox PH protective: 0'"
       ],
       "text/markdown": [
-       "'Sig. Cox PH protective: 11'"
+       "'Sig. Cox PH protective: 0'"
       ],
       "text/plain": [
-       "[1] \"Sig. Cox PH protective: 11\""
+       "[1] \"Sig. Cox PH protective: 0\""
       ]
      },
      "metadata": {},
@@ -493,16 +516,16 @@
     {
      "data": {
       "text/html": [
-       "'Sig. Cox PH harmful: 78'"
+       "'Sig. Cox PH harmful: 0'"
       ],
       "text/latex": [
-       "'Sig. Cox PH harmful: 78'"
+       "'Sig. Cox PH harmful: 0'"
       ],
       "text/markdown": [
-       "'Sig. Cox PH harmful: 78'"
+       "'Sig. Cox PH harmful: 0'"
       ],
       "text/plain": [
-       "[1] \"Sig. Cox PH harmful: 78\""
+       "[1] \"Sig. Cox PH harmful: 0\""
       ]
      },
      "metadata": {},
@@ -544,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -557,6 +580,7 @@
       "  cor = col_double(),\n",
       "  pval = col_double(),\n",
       "  padj = col_double(),\n",
+      "  qval = col_double(),\n",
       "  n = col_double()\n",
       ")\n"
      ]
@@ -620,7 +644,8 @@
     "cor_results_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[dset_idx], \"_cor_results.tsv\"))\n",
     "\n",
     "# filtered_cor_results_df <- cor_results_df %>% dplyr::filter(pval < p_thresh)\n",
-    "filtered_cor_results_df <- cor_results_df %>% dplyr::filter(padj < p_thresh)\n",
+    "# filtered_cor_results_df <- cor_results_df %>% dplyr::filter(padj < p_thresh)\n",
+    "filtered_cor_results_df <- cor_results_df %>% dplyr::filter(qval < p_thresh)\n",
     "\n",
     "n_cor <- nrow(filtered_cor_results_df)\n",
     "n_cor_down <- nrow(filtered_cor_results_df %>% dplyr::filter(cor < 0))\n",
@@ -640,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -839,23 +864,24 @@
       "cols(\n",
       "  geneID = col_character(),\n",
       "  pval = col_double(),\n",
-      "  padj = col_double()\n",
+      "  padj = col_double(),\n",
+      "  qval = col_double()\n",
       ")\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "'Sig. ANOVA: 13'"
+       "'Sig. ANOVA: 16'"
       ],
       "text/latex": [
-       "'Sig. ANOVA: 13'"
+       "'Sig. ANOVA: 16'"
       ],
       "text/markdown": [
-       "'Sig. ANOVA: 13'"
+       "'Sig. ANOVA: 16'"
       ],
       "text/plain": [
-       "[1] \"Sig. ANOVA: 13\""
+       "[1] \"Sig. ANOVA: 16\""
       ]
      },
      "metadata": {},
@@ -864,7 +890,8 @@
    ],
    "source": [
     "welch_anova_results_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[dset_idx], \"_welch_anova_results.tsv\"))\n",
-    "filtered_welch_anova_results_df <- welch_anova_results_df %>% dplyr::filter(padj < p_thresh)\n",
+    "# filtered_welch_anova_results_df <- welch_anova_results_df %>% dplyr::filter(padj < p_thresh)\n",
+    "filtered_welch_anova_results_df <- welch_anova_results_df %>% dplyr::filter(qval < p_thresh)\n",
     "\n",
     "n_sig <- nrow(filtered_welch_anova_results_df)\n",
     "\n",
@@ -880,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
