--- a/enrichment_analysis/network_ea_v2.ipynb
+++ b/enrichment_analysis/network_ea_v2.ipynb
@@ -296,7 +296,12 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
