--- a/network_analysis/relate_modules_to_traits.ipynb
+++ b/network_analysis/relate_modules_to_traits.ipynb
@@ -2,68 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
-      "✔ ggplot2 3.3.2     ✔ purrr   0.3.4\n",
-      "✔ tibble  3.0.3     ✔ dplyr   1.0.0\n",
-      "✔ tidyr   1.1.0     ✔ stringr 1.4.0\n",
-      "✔ readr   1.3.1     ✔ forcats 0.5.0\n",
-      "── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "✖ dplyr::filter() masks stats::filter()\n",
-      "✖ dplyr::lag()    masks stats::lag()\n",
-      "Loading required package: dynamicTreeCut\n",
-      "Loading required package: fastcluster\n",
-      "\n",
-      "Attaching package: ‘fastcluster’\n",
-      "\n",
-      "The following object is masked from ‘package:stats’:\n",
-      "\n",
-      "    hclust\n",
-      "\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘WGCNA’\n",
-      "\n",
-      "The following object is masked from ‘package:stats’:\n",
-      "\n",
-      "    cor\n",
-      "\n",
-      "\n",
-      "********************************************************\n",
-      "Note: As of version 1.0.0, cowplot does not change the\n",
-      "  default ggplot2 theme anymore. To recover the previous\n",
-      "  behavior, execute:\n",
-      "  theme_set(theme_cowplot())\n",
-      "********************************************************\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘matrixStats’\n",
-      "\n",
-      "The following object is masked from ‘package:dplyr’:\n",
-      "\n",
-      "    count\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘qvalue’\n",
-      "\n",
-      "The following object is masked from ‘package:WGCNA’:\n",
-      "\n",
-      "    qvalue\n",
-      "\n"
-     ]
-    }
-   ],
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "library(WGCNA)\n",
@@ -77,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,12 +46,14 @@
     "event_code <- list(\"Alive\" = 0, \"Dead\" = 1)\n",
     "# Want to bias q-values closer to \"BH\" adjustment for module-wise multiple testing\n",
     "# since there are fewer modules than genes\n",
+    "# This value also needs to be sufficiently small as to not cause an error for any datasets\n",
+    "# (too few samples may lead to bad behavior of the qvalue() function)\n",
     "module_lambda_thresh <- 0.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,12 +101,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Module significance for survival analysis"
+    "# Significance for survival analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 84,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -244,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
