Updated enrichment analysis to use the 'make_lists' notebook

--- a/meta_analysis/make_gene_lists.ipynb
+++ b/meta_analysis/make_gene_lists.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,12 +253,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
     "dge_geneIDs <- filtered_dge_df$geneID\n",
     "dge_m_geneIDs <- filtered_dge_m_df$geneID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_lines(dge_geneIDs, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_dge_gene_list.txt\"))"
    ]
   },
   {
@@ -270,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -355,6 +364,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_lines(figo_geneIDs, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_figo_gene_list.txt\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -363,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +464,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_lines(survival_geneIDs, paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_survival_gene_list.txt\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -526,8 +553,15 @@
     "length(dge_geneIDs)\n",
     "length(dge_m_geneIDs)\n",
     "length(survival_geneIDs)\n",
-    "length(figo_geneIDs)\n"
+    "length(figo_geneIDs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
