DEG result write-outs updated.

--- a/meta_analysis/analysis_res_meta.ipynb
+++ b/meta_analysis/analysis_res_meta.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,9 +71,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  Division = col_character(),\n",
+      "  Category = col_character(),\n",
+      "  `Gene Symbol` = col_character(),\n",
+      "  `Gene Name` = col_character(),\n",
+      "  Synonyms = col_character(),\n",
+      "  HGNC_IDs = col_double(),\n",
+      "  `HGNC_IDs Links` = col_double(),\n",
+      "  UniProt_IDs = col_character(),\n",
+      "  Refseq_IDs = col_character(),\n",
+      "  Orthology = col_character(),\n",
+      "  Notes = col_character()\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "matrisome_df <- rutils::load_matrisome_df(matrisome_list) %>%\n",
     "    dplyr::select(gene_symbol, division, category)\n",
@@ -89,9 +110,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  .default = col_double(),\n",
+      "  geneID = col_character()\n",
+      ")\n",
+      "See spec(...) for full column specifications.\n"
+     ]
+    }
+   ],
    "source": [
     "norm_counts_df <- read_tsv(paste0(dirs$data_dir, \"/\", unified_dsets[dset_idx], \"/\", \"norm_counts.tsv\"))"
    ]
@@ -105,11 +139,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  geneID = col_character(),\n",
+      "  baseMean = col_double(),\n",
+      "  log2FoldChange = col_double(),\n",
+      "  lfcSE = col_double(),\n",
+      "  stat = col_double(),\n",
+      "  pvalue = col_double(),\n",
+      "  padj = col_double(),\n",
+      "  qval = col_double()\n",
+      ")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "'DEGs: 7652'"
+      ],
+      "text/latex": [
+       "'DEGs: 7652'"
+      ],
+      "text/markdown": [
+       "'DEGs: 7652'"
+      ],
+      "text/plain": [
+       "[1] \"DEGs: 7652\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "'DEG prop: 0.378025886770082'"
+      ],
+      "text/latex": [
+       "'DEG prop: 0.378025886770082'"
+      ],
+      "text/markdown": [
+       "'DEG prop: 0.378025886770082'"
+      ],
+      "text/plain": [
+       "[1] \"DEG prop: 0.378025886770082\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "'Up: 3966'"
+      ],
+      "text/latex": [
+       "'Up: 3966'"
+      ],
+      "text/markdown": [
+       "'Up: 3966'"
+      ],
+      "text/plain": [
+       "[1] \"Up: 3966\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "'Down: 3686'"
+      ],
+      "text/latex": [
+       "'Down: 3686'"
+      ],
+      "text/markdown": [
+       "'Down: 3686'"
+      ],
+      "text/plain": [
+       "[1] \"Down: 3686\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "'Matrisome DEGs: 593'"
+      ],
+      "text/latex": [
+       "'Matrisome DEGs: 593'"
+      ],
+      "text/markdown": [
+       "'Matrisome DEGs: 593'"
+      ],
+      "text/plain": [
+       "[1] \"Matrisome DEGs: 593\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "'Matrisome DEG prop: 0.577409931840312'"
+      ],
+      "text/latex": [
+       "'Matrisome DEG prop: 0.577409931840312'"
+      ],
+      "text/markdown": [
+       "'Matrisome DEG prop: 0.577409931840312'"
+      ],
+      "text/plain": [
+       "[1] \"Matrisome DEG prop: 0.577409931840312\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "'Matrisome up: 262'"
+      ],
+      "text/latex": [
+       "'Matrisome up: 262'"
+      ],
+      "text/markdown": [
+       "'Matrisome up: 262'"
+      ],
+      "text/plain": [
+       "[1] \"Matrisome up: 262\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "'Matrisome down: 331'"
+      ],
+      "text/latex": [
+       "'Matrisome down: 331'"
+      ],
+      "text/markdown": [
+       "'Matrisome down: 331'"
+      ],
+      "text/plain": [
+       "[1] \"Matrisome down: 331\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "DESeq_results_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[dset_idx], \"_DESeq_results.tsv\"))\n",
+    "DESeq_results_df <- read_tsv(paste0(dirs$analysis_dir, \"/deg/\", unified_dsets[dset_idx], \"_DESeq_results.tsv\"))\n",
     "# filtered_DESeq_results_df <- DESeq_results_df %>%\n",
     "#     dplyr::filter(abs(log2FoldChange) > lfc_thresh, padj < p_thresh)\n",
     "filtered_DESeq_results_df <- DESeq_results_df %>%\n",
