ANOVA experiments re-organized.

--- a/meta_analysis/analysis_res_meta.ipynb
+++ b/meta_analysis/analysis_res_meta.ipynb
@@ -490,11 +490,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  geneID = col_character(),\n",
+      "  pval = col_double(),\n",
+      "  padj = col_double(),\n",
+      "  qval = col_double()\n",
+      ")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "'Sig. ANOVA: 3'"
+      ],
+      "text/latex": [
+       "'Sig. ANOVA: 3'"
+      ],
+      "text/markdown": [
+       "'Sig. ANOVA: 3'"
+      ],
+      "text/plain": [
+       "[1] \"Sig. ANOVA: 3\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "welch_anova_results_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[dset_idx], \"_welch_anova_results.tsv\"))\n",
+    "welch_anova_results_df <- read_tsv(paste0(dirs$analysis_dir, \"/feature_selection/\", unified_dsets[dset_idx], \"_welch_anova_results.tsv\"))\n",
     "# filtered_welch_anova_results_df <- welch_anova_results_df %>% dplyr::filter(padj < p_thresh)\n",
     "filtered_welch_anova_results_df <- welch_anova_results_df %>% dplyr::filter(qval < p_thresh)\n",
     "\n",
