Updated and cleaned up correlation experiments.

--- a/meta_analysis/analysis_res_meta.ipynb
+++ b/meta_analysis/analysis_res_meta.ipynb
@@ -405,11 +405,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parsed with column specification:\n",
+      "cols(\n",
+      "  geneID = col_character(),\n",
+      "  cor = col_double(),\n",
+      "  pval = col_double(),\n",
+      "  padj = col_double(),\n",
+      "  qval = col_double(),\n",
+      "  n = col_double()\n",
+      ")\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "'Cor. genes: 1'"
+      ],
+      "text/latex": [
+       "'Cor. genes: 1'"
+      ],
+      "text/markdown": [
+       "'Cor. genes: 1'"
+      ],
+      "text/plain": [
+       "[1] \"Cor. genes: 1\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "'Neg. cor. genes: 0'"
+      ],
+      "text/latex": [
+       "'Neg. cor. genes: 0'"
+      ],
+      "text/markdown": [
+       "'Neg. cor. genes: 0'"
+      ],
+      "text/plain": [
+       "[1] \"Neg. cor. genes: 0\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "'Pos. cor. genes: 1'"
+      ],
+      "text/latex": [
+       "'Pos. cor. genes: 1'"
+      ],
+      "text/markdown": [
+       "'Pos. cor. genes: 1'"
+      ],
+      "text/plain": [
+       "[1] \"Pos. cor. genes: 1\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "cor_results_df <- read_tsv(paste0(dirs$analysis_dir, \"/\", unified_dsets[dset_idx], \"_cor_results.tsv\"))\n",
+    "cor_results_df <- read_tsv(paste0(dirs$analysis_dir, \"/feature_selection/\", unified_dsets[dset_idx], \"_cor_results.tsv\"))\n",
     "\n",
     "# filtered_cor_results_df <- cor_results_df %>% dplyr::filter(pval < p_thresh)\n",
     "# filtered_cor_results_df <- cor_results_df %>% dplyr::filter(padj < p_thresh)\n",
